--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "types/**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "middleware.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "types/**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "middleware.ts"
+  ],
+  "exclude": ["node_modules", "./dist/**/*"]
 }
